	- don't use error string after gzclose (Dmitry V. Levin).
	- only internal Berkeley db from now on.
	- revive "make dist".
	- fix: added index size wrong iff _transaction_color != 0/3 (#103865).
	- fix: escape '+' in regex patterns through RPMMIRE_DEFAULT (#103851).
	- RPMMIRE_DEFAULT is overkill, use RPMMIRE_STRCMP instead (#103851).
	- don't use mktemp if mkstemp is available (#103850).
	- use -fPIC -DPIC on all platforms, not just mandatory (#112713).
	- python: return None for NEVRAO, [] for everything else.
	- python: throw exception on bad arg to labelCompare (#113661).
	- re-add --enable-posixmutexes to build.
	- fix: set fcontext from pkg when file_contexts doesn't exist (#114040).
	- fix: set fcontext for "mkdir -p" directories not in packages.
	- fix: setfiles (aka rpmsx.c) dinna handle patterns correctly.
	- establish rpm_script_t before scriptlet exec.
	- python: add patch to rpm-4_3 to initialize RE contexts.
	- fix: only first "mkdir -p" directory had context set.
	- stable sort for policy specifications, patterns before paths.
	- set "rpm_script_t" exec type for scriptlets iff /bin/sh, else default.
	- force FD_CLOEXEC on 1st 100 inherited fdno's.
	- serialize rpmtsRun() using fcntl on /var/lock/rpm/transaction.
	- permit globs in macrofiles: directive (#117217).
	- fix: segfault generating transaction serialization lock path.
	- use /etc/security/selinux/file_contexts instead.
	- selinux: ignore ENOTSUP return from lsetfilecon.
	- add sparcv8 and enable elf32/elf64 Zon sparc64 (#117302).
	- fix: --querybynumber looped.
	- fix: ENOTSUP filter from lsetfilecon borkage.
	- fix: increase file context regex parse buffer to BUFSIZ.
	- fix: handle elf64 note sections correctly.
	- fix: grrr, skip notes on non-i386 entirely.
	- endian neutral rpmdb join keys (finally).
	- fix: dev package build on s390x hack around.

4.2.2 -> 4.2.3:
	- bump rpm and popt versions to insure "newer".
	- change default behavior to resolve file conflicts as LIFO.