@@ -445,8 +445,18 @@ fprintf(stderr, "*** add %p[%d] 0x%x\n", al->list, pkgNum, tscolor);
 	    (void) rpmfiSetDX(fi, dx);
 
 	    /*@-assignexpose -dependenttrans -observertrans@*/
-	    dieNeedle->dirName = (char *) rpmfiDN(fi);
+	    {   const char * DN = rpmfiDN(fi);
+
+#if defined(__ia64__)
+/* XXX Make sure that autorelocated file dependencies are satisfied. */
+#define	DNPREFIX	"/emul/ia32-linux"
+		if (!strncmp(DN, DNPREFIX, sizeof(DNPREFIX)-1))
+		    DN += sizeof(DNPREFIX)-1;
+#endif
+		dieNeedle->dirName = DN;
+	    }
 	    /*@=assignexpose =dependenttrans =observertrans@*/
+
 	    dieNeedle->dirNameLen = (dieNeedle->dirName != NULL
 			? strlen(dieNeedle->dirName) : 0);
 	    die = bsearch(dieNeedle, al->dirs, origNumDirs,
